[BurgerButton]: fix padding for items with and without icon so that all items aligned on one line

--- a/epam-promo/components/navigation/MainMenu/Burger/BurgerButton.scss
+++ b/epam-promo/components/navigation/MainMenu/Burger/BurgerButton.scss
@@ -3,7 +3,7 @@
 
 .root {
     @include burger-button-color();
-    padding: 0 48px;
+    padding: 0 24px;
     background: none;
     border: 0;
     outline: none;
